Prevented loadout weapon image from getting too big

--- a/src/app/features/loadouts/Loadout/WeaponList/Weapon/LoadoutWeaponItem.css
+++ b/src/app/features/loadouts/Loadout/WeaponList/Weapon/LoadoutWeaponItem.css
@@ -1,5 +1,6 @@
 .loadout-weapon-item {
 	position: relative;
+	height: 100%;
 }
 
 .loadout-weapon-item h4 {
@@ -8,6 +9,10 @@
 
 .loadout-weapon-item h5 {
 	position: initial;
+}
+
+.loadout-weapon-item img {
+	max-height: 700px;
 }
 
 .center-loadout-item {
